logs/mobility/build.make.011.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void initializeStuff()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:309:27: error: expected ‘;’ before ‘:’ token
 print("done initializing"):
                           ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
